# django-composed-configuration

./: .editorconfig  .git-blame-ignore-revs  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
composed_configuration/: __init__.py  _allauth.py  _base.py  _celery.py  _configuration.py  _cors.py  _database.py  _debug.py  _django.py  _docker.py  _email.py  _extensions.py  _filter.py  _girder_utils.py  _https.py  _logging.py  _rest_framework.py  _sentry.py  _static.py  _storage.py  _values.py  models.py
composed_configuration/_allauth_support/: apps.py  createsuperuser.py  forms.py  receiver.py  utils.py
composed_configuration/_allauth_support/management/commands/: createsuperuser.py
composed_configuration/authentication/: adapter.py  apps.py
composed_configuration/authentication/templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
composed_configuration/configuration/: __init__.py  _configuration.py  _debug.py  _django.py  _email.py  _static.py
composed_configuration/sentry/: apps.py
cookiecutter/girder/: Procfile  docker-compose.override.yml  manage.py  setup.py
cookiecutter/girder/dev/: source-native-env.sh
cookiecutter/girder/girder/: asgi.py  settings.py  wsgi.py
django_girders/: storage.py
django_girders/configuration/: __init__.py  _base.py  _celery.py  _configuration.py  _cors.py  _debug.py  _django.py  _email.py  _extensions.py  _filter.py  _logging.py  _rest_framwork.py  _static.py  _storage.py
